# bycco

./: .gcloudignore  .gitignore  README.md  app.yaml  dispatch.yaml  package.json  poe_tasks.yaml  pyproject.toml  requirements.txt
backend/: app.yaml  common.yaml  env_local.py  env_prod.py  env_prodtest.py  pyproject.toml  requirements.txt
backend/bycco/: __init__.py  main.py  settings.py  tst_endpoints.py
backend/bycco/attendee/: __init__.py  api_attendee.py  attendee.py  md_attendee.py
backend/bycco/core/: mail.py
backend/bycco/enrollment/: __init__.py  api_enrollment.py  enrollment.py  md_enrollment.py
backend/bycco/guest/: __init__.py  api_guest.py  guest.py
backend/bycco/lodging/: __init__.py  api_lodging.py  lodging.py  md_lodging.py
backend/bycco/page/: __init__.py  api_page.py  page.py
backend/bycco/participant/: __init__.py  api_participant.py  md_participant.py  participant.py
backend/bycco/paymentrequest/: __init__.py  api_paymentrequest.py  md_paymentrequest.py  paymentrequest.py
backend/bycco/registration/: __init__.py  api_registration.py  md_registration.py  registration.py
backend/bycco/room/: __init__.py  api_room.py  room.py
backend/bycco/scripts/: i18n.py  import_rooms.py
backend/bycco/statamic/: __init__.py  api_statamic.py  statamic.py
backend/bycco/stay/: __init__.py  api_stay.py  md_stay.py  stay.py
backend/bycco/templates/: confirmrequest_vk_en.md  confirmrequest_vk_nl.md  mailenrollment_bjk_de.md  mailenrollment_bjk_en.md  mailenrollment_bjk_fr.md  mailenrollment_bjk_nl.md  mailenrollment_nl.md  mailenrollment_vk_en.md  mailenrollment_vk_nl.md  mailregistration_bjk_de.md  mailregistration_bjk_en.md  mailregistration_bjk_fr.md  mailregistration_bjk_nl.md  mailreservation_de.md  mailreservation_en.md  mailreservation_fr.md  mailreservation_nl.md  pr_enroll_mail_nl.md  (+19 more)
backend/libs/: reddevil-3.3.3-py3-none-any.whl
(+248 files in other folders)
