[tool.poetry]
name = "bycco"
version = "2.0.0"
description = "Bycco backend"
authors = ["Ruben Decrop <ruben.decrop@bycco.be>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
toml = "^0.10.2"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"
reddevil = {path = "libs/reddevil-3.3.3-py3-none-any.whl"}
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
