[tool.poetry]
name = "bycco"
version = "2.1.3"
description = "Bycco backend"
authors = ["Ruben Decrop <ruben.decrop@bycco.be>"]

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
reddevil = {path = "libs/reddevil-3.3.5-py3-none-any.whl"}
openpyxl = "^3.1.2"
asyncssh = "^2.14.2"

[tool.poetry.group.dev.dependencies]
black = "^23"
pytest = "^7"
pytest-asyncio = "^0.23.5"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
